<resources>

    <!-- common -->
    <string name="button_generate_key">Generate key</string>
    <string name="button_remove_key">Remove key</string>
    <string name="button_encrypt">Encrypt</string>
    <string name="button_decrypt">Decrypt</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clear_messages">Clear messages</string>
    <string name="label_key_alias">Secret key alias: %s</string>
    <string name="label_key_missing">(no key)</string>
    <string name="label_message_to_encrypt">Message to encrypt:</string>
    <string name="label_encrypted_message">Encrypted message:</string>
    <string name="label_decrypted_message">Decrypted message:</string>
    <string name="error_message">Error occurred</string>

    <!-- Main activity -->
    <string name="main_nav_header_title">Security</string>
    <string name="main_nav_drawer_open_desc">Open navigation drawer</string>
    <string name="main_nav_drawer_close_desc">Close navigation drawer</string>

    <!-- Secret key fragment -->
    <string name="secret_key_nav_item_title">Secret Key</string>
    <string name="secret_key_screen_title">@string/secret_key_nav_item_title</string>
    <string name="secret_key_description">You can generate secret key which will be secured by the phone lock, and use this key to encrypt/decrypt message</string>

    <!-- Fingerprint fragment -->
    <string name="fingerprint_nav_item_title">Fingerprint</string>
    <string name="fingerprint_screen_title">@string/fingerprint_nav_item_title</string>
    <string name="fingerprint_description">You can generate secret key which will be secured with the user fingerprint, and use this key to encrypt/decrypt the message</string>
    <string name="fingerprint_error_pre_marshmallow">Feature available from Android Marshmallow</string>
    <string name="fingerprint_error_missing_hardware">Fingerprint scanner is missing on your device</string>
    <string name="fingerprint_error_missing_fingerprints">You must enroll at least one fingerprint</string>
    <string name="fingerprint_error_device_is_not_secure">Your device needs to be secured with fingerprint</string>
    <string name="fingerprint_confirmation_title">Confirm operation</string>
    <string name="fingerprint_confirmation_negative_button">Cancel</string>

    <!-- Old Fingerprint dialog -->
    <string name="fingerprint_dialog_description">Confirm fingerprint to continue</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>

    <!-- Pin fragment -->
    <string name="pin_nav_item_title">Pin</string>
    <string name="pin_screen_title">@string/pin_nav_item_title</string>
    <string name="pin_description">You can generate private and public key pair which will be secured with the pin, and use it to encrypt/decrypt the message</string>
    <string name="pin_keyguard_description">Authenticate in order to decrypt the message</string>

</resources>
