<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:orientation="vertical">

    <TextView
        android:id="@+id/keyAliasLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_key_alias"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/generateKeyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_generate_key"/>

        <Button
            android:id="@+id/removeKeyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_remove_key"/>

        <Button
            android:id="@+id/clearMessagesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_clear_messages"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/messageInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messageInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_message_to_encrypt"
            android:inputType="text"
            android:imeOptions="flagNoExtractUi"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/encryptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/button_encrypt"/>

    <TextView
        android:id="@+id/encryptedMessageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_encrypted_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    <TextView
        android:id="@+id/encryptedMessageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="jdfjsdl;af;oisdufoiasudfoiuasdof"/>

    <Button
        android:id="@+id/decryptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/button_decrypt"/>

    <TextView
        android:id="@+id/decryptedMessageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_decrypted_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    <TextView
        android:id="@+id/decryptedMessageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="Hello world, sample message"/>
</merge>